--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">1000</Value>
     </Setting>
     <Setting Name="KeyWord" Type="System.String" Scope="User">
-      <Value Profile="(Default)">trung tam tieng anh oxbridge</Value>
+      <Value Profile="(Default)">Trung tâm Anh ngữ Oxbridge</Value>
     </Setting>
     <Setting Name="BrowserType" Type="System.String" Scope="User">
       <Value Profile="(Default)">Edge</Value>
